--- a/Article/article.tex
+++ b/Article/article.tex
@@ -12,11 +12,11 @@
 \usepackage{color}
 \usepackage{paralist}
 \usepackage{framed}
-%%\usepackage{caption}
-\usepackage{subcaption}
+\usepackage{caption}
+%%\usepackage{subcaption}
 \captionsetup{compatibility=false}
 \usepackage{todonotes}
-
+\usepackage{subfig}
 
 
 \usepackage[shortlabels]{enumitem}
@@ -33,6 +33,9 @@
 
 \newcommand{\hp}{{\sc HeteroPrio}\xspace}
 \SetKw{continue}{continue}
+
+\usepackage{tikz}
+\usetikzlibrary{fit,calc,positioning,decorations.pathreplacing,matrix}
 
 
 %%\pagenumbering{gobble}
@@ -65,7 +68,7 @@
 %%		The abstract should briefly summarize the contents of the
 %%		paper in 150--250 words.
 
-With increasing complexity of hardwares, systems with different memory nodes are ubiquitous in high performance computing (HPC). It is paramount to develop strategies to overlap the data transfers between memory nodes with the computation in order to exploit the full potential of these systems. In this article, we consider the problem of deciding the  order of data transfers between two memory nodes for a set of independent tasks  with the objective to minimize the makespan. We propose an optimal heuristic to obtain the order of data transfers when there is not any restriction on memory limit. We also show that with finite memory capacity obtaining the optimal order of data transfers is an NP-complete problem. We propose several heuristics for this problem and provide analysis of them on traces obtained by running 2 molecular chemistry kernels, namely, Hartree–Fock (HF)  and CCSD on 10 nodes of an HPC system. Our results show that some of our heuristics achieve significant overlap for moderate memory capacities and are very close to the lower bound of makespan.
+With increasing complexity of hardwares, systems with different memory nodes are ubiquitous in high performance computing (HPC). It is paramount to develop strategies to overlap the data transfers between memory nodes with the computation in order to exploit the full potential of these systems. In this article, we consider the problem of deciding the  order of data transfers between two memory nodes for a set of independent tasks  with the objective to minimize the makespan. We propose an optimal heuristic to obtain the order of data transfers when there is not any restriction on memory limit. We also show that with finite memory capacity obtaining the optimal order of data transfers is an NP-complete problem. We propose several heuristics for this problem and provide details about their favorable situations. We present analysis of our heuristics on traces obtained by running 2 molecular chemistry kernels, namely, Hartree–Fock (HF)  and Coupled Cluster Single Double (CCSD) on 10 nodes of an HPC system. Our results show that some of our heuristics achieve significant overlap for moderate memory capacities and are very close to the lower bound of makespan.
 
 		\keywords{Communication Scheduling  \and Memory Nodes \and Molecular Chemistry.}
 	\end{abstract} %
@@ -95,7 +98,7 @@ With increasing complexity of hardwares, systems with different memory nodes are
 	\end{itemize}
 		
 
-
+\todo[inline]{Add outline of this article (in the end)}
 \section{Related Work}
 
 
@@ -105,7 +108,7 @@ Historically there has been a great emphasis on the development of parallel algo
   
 The problem of scheduling tasks has been highly studied in literature and this problem is known to be NP-Complete~\cite{GareyJohnson}.  Many static and dynamic strategies have been proposed and analyzed for this problem~\cite{heft-Topcuoglu,hipc16multiresource,ipdps16starpu}. There ia also a number of studies in the direction of task scheduling with the emphasis of improving locality and minimizing the communication cost~\cite{starpu,heft-Topcuoglu}. Stanisic et. al proposed a heuristic to schedule tasks on a computing resource where most of its data is available~\cite{luka-dmdar}. Similar approach has been adopted by Agullo et. al for the scheduling of sparse linear algebra kernels~\cite{agullo_fmm}.  Predari et.al  proposed  heuristics to  partition the task graph across a number of processors such that inter processor communication can be minimized ~\cite{predari:tel-01518956}.
 
-The problem considered in this paper also can be viewed as a flow shop problem. Communication and computation timings of a task can be considered as processing timings on different machines.  Johnson has provided scheduling strategies for 2 and 3-machine flow shop problems with infinite memory case~\cite{johnson}. 2-machine flow shop problem with finite memory capacity has been proven NP-Complete by Papadimitriou et. al~\cite{Papadimitriou:1980:FSL:322203.322213}. The main difference with the our approach is that they consider unit buffer requirement on 1st machine after job completion. On the contrary, our approach is designed for tasks appearing in scientific workloads whose sizes are highly irregular and memory is acquired before starting the communication.
+The problem considered in this paper also can be viewed as a flow shop problem. Communication and computation timings of a task can be considered as processing timings on different machines.  Johnson has provided scheduling strategies for 2 and 3-machine flow shop problems with infinite memory capacity~\cite{johnson}. 2-machine flow shop problem with finite memory capacity has been proven NP-Complete by Papadimitriou et. al~\cite{Papadimitriou:1980:FSL:322203.322213}. The main difference with the our approach is that they consider unit buffer requirement on 1st machine after job completion. On the contrary, our approach is designed for tasks appearing in scientific workloads whose sizes are highly irregular and memory is acquired before starting the communication.
 
 There is also a numerous study pertaining to the scheduling with limited memory and storage, since the work of Sethi and Ulman, register allocation for arithmetic expressions~\cite{Sethi:1970:GOC:321607.321620}.  Sarkar et. al  worked on the scheduling of graphs of smaller-grain tasks with limited memory, where each task requires homogeneous data size ~\cite{vsarkar-pact}. The same work has been extend by Loris et. al for task graphs where memory requirement of each task is highly irregular~\cite{loris-ipdps18}.
 
@@ -150,13 +153,13 @@ There is also a numerous study pertaining to the scheduling with limited memory 
 \end{algorithm}
 	
 	
-	\noindent \textbf{Claim} : Order provided by Algorithms~\ref{alg:OrderOfExecutionInfinteMemory} achives the optimal makespan for a set of ready tasks.
-	
+	\noindent \textbf{Claim} : Order provided by Algorithm~\ref{alg:OrderOfExecutionInfinteMemory} achives the optimal makespan for a set of ready tasks.
+	\todo[inline]{SKumar:rewrite this proof}
 	\begin{proof}
 		Let us first define some notations which we need for this proof.
 %%		\todo[inline]{SKumar: Specify the destination for all notations}
 		\begin{align*}
-		t : & \text{Time at which data transfer for task A started in original schedule}\\
+		t : & \text{Time at which data transfer for task A starts in original schedule}\\
 		S_A : & \text{ Start of computation  time of task A in original schedule}\\
 		S_B : & \text{ Start of computation time of task B in original schedule}\\
 		S'_A : & \text{ Start of computation time of task A in swapped schedule}\\
@@ -238,7 +241,7 @@ There is also a numerous study pertaining to the scheduling with limited memory 
 	\end{proof}	
 
 
-This problem can be expressed as 2-machine flowshop problem with infinite storage, where communication time is the processing time on first machine and computation time is the processing time on second machine and the goal is to minimize the overall makespan. In [], Johnson's algorithm also achieves the optimal makespan but the proof techniques and algorithm are quite different from ours.
+This problem can be expressed as 2-machine flowshop problem with infinite storage, where communication time is the processing time on first machine and computation time is the processing time on second machine and the goal is to minimize the overall makespan. In ~\cite{GareyJohnson}, Johnson's algorithm also achieves the optimal makespan but the proof techniques and algorithm are quite different from ours.
 	\subsection{Finite Memory}
 	
 	In general, order of task execution with input and output data transfers can be 
@@ -246,6 +249,8 @@ This problem can be expressed as 2-machine flowshop problem with infinite storag
 	input data transfer time,  processing time on 2nd machine is task execution time, 
 	processing time on 3rd machine is output data transfer time  and the objective is 
 	to minimize the total makespan. This is a well known NP-complete problem. 
+	\todo{Skumar: Need a citation}
+	As stated earlier, we do not consider output data separately in our analysis and assume that output data is zero or stored in a separate buffer. Hence, problem considered in this article is simpler than general 3-machine flowshop problem.
 	
 	
 	\noindent\textbf{Probelm  $DT$} : A set of tasks $ST=\{T_1, \cdots, T_n\}$ is scheduled on a processing 
@@ -274,7 +279,7 @@ This problem can be expressed as 2-machine flowshop problem with infinite storag
    	such that $\forall i, a_{i_1} + a_{i_2}  + a_{i_3}  = b$, where $b=(1/m) \sum a_i $?
    	
    	This problem is known to be NP-complete.
-   	
+ 	\todo{Skumar: Need a citation}  	
    	
    	\noindent Let us first show that $3PAR$ problem reduces in polynomial time to problem $DT$.  
    	Suppose that we 
@@ -371,10 +376,10 @@ The heuristic proposed in the Section provides the optimal makespan when there i
 We classify our heuristics into mainly three categories. In the first category, the order of all computations and communications is computed in advanced and the same order is followed on both channels. While in the second category, the best suited next task is chosen based on different criteria. In the last category, which is based on combination of strategies of the other two categories, we precompute the order and try to follow it as much as possible, but when the precomputed schedule induces idle time then we look for the best suited next task. In all of our strategies (except linear programming based strategy) order of communications and computations, are same.
 
 \subsection{Static Ordering}
-In this class of strategies, we compute the order of both computations and communications in advance based on criteria such as communication time, compute time, accelerated tasks. After computing the order, we follow the same order on computation and communication channels and make sure that at each point in the schedule memory capacity is respected.
+In this class of strategies, we compute the order of both computations and communications in advance based on criteria such as communication time, compute time and accelerated tasks. After computing the order, we follow the same order on computation and communication channels and make sure that at each point in the schedule memory capacity is respected.
 
 
-In strategy (cite optimal strategy), compute intensive tasks (step 1) are sorted in increasing order of communication times. It allows tasks to utilize the computation channel maximally and make enough space on communication channel to accommodate more communication intensive tasks with maximum overlap. Communication intensive tasks are sorted in decreasing order of communication time, which allows tasks to utilize the gap created on communicated channel. Hence,  in this section, we obtain the orders by sorting tasks based on different combinations of communication and computation times.
+In Algorithm~\ref{alg:OrderOfExecutionInfinteMemory}, compute intensive tasks (step 1) are sorted in increasing order of communication times. It allows tasks to utilize the computation channel maximally and make enough space on communication channel to accommodate more communication intensive tasks with maximum overlap. Communication intensive tasks are sorted in decreasing order of computation time, which allows tasks to utilize the gap created on communication channel. Hence,  in this section, we obtain the orders by sorting tasks based on different combinations of communication and computation times.
 
 %%%%name = "optimal_time_infinite_case";
 %%%%string alg_name="order_of_optimal_strategy_infinite_memory";
@@ -396,6 +401,98 @@ In strategy (cite optimal strategy), compute intensive tasks (step 1) are sorted
 	
 \end{itemize}
 \todo[inline]{SKumar: equivalent tikz figure}
+\begin{tabular}{|l|l|l|}
+\hline
+Task & Comm Time & Comp Time\\ \hline
+A & 3 & 2\\ \hline
+B & 1 & 3\\ \hline
+C & 4 & 4\\ \hline
+D & 2 & 1\\ \hline
+\end{tabular}
+	\begin{figure}[htb]
+	\centering
+%% 	\subfloat[Optimal schedule]{
+		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=1, every node/.style={scale=1}]
+		\node(t1) at (0,0) {};       		
+		\node[above right=0cm and 0cm of t1.mid, draw, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};
+		
+		\node[below right=0cm and 0cm of b11.south east, draw, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b12) {$B$};			
+		
+		\node[above right=0cm and 0cm of b11.south east, draw, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c11) {$C$};
+
+		\node[below right=0cm and 0cm of c11.south east, draw, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c12) {$C$};		
+		
+		\node[above right=0cm and 0cm of c11.south east, draw, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a11) {$A$};
+
+		\node[below right=0cm and 0cm of c12.north east, draw, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a12) {$A$};
+		
+		\node[above right=0cm and 0cm of a11.south east, draw, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d11) {$D$};
+		
+		\node[below right=0cm and 0cm of a12.north east, draw, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d12) {$D$};	
+		
+%%		\draw[->]	(5,-1)-- (b11.west, b11.south)	;
+		
+%%		\draw[->] ([xshift=-0.1cm, yshift=-1cm] b11.south west)--([xshift=13cm, yshift=-1cm] b11.south west);
+		\tikzstyle{legend}=[below=0.25, anchor=mid] 	
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+             -- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
+             -- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.5] {$1$}
+             -- ([shift={(4, -0.65)}] t1.mid)node[legend,scale=0.5] {$4$}
+             -- ([shift={(5, -0.65)}] t1.mid)node[legend,scale=0.5] {$5$}
+             -- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.5] {$8$}
+             -- ([shift={(9, -0.65)}] t1.mid)node[legend,scale=0.5] {$9$}
+             -- ([shift={(10, -0.65)}] t1.mid)node[legend,scale=0.5] {$10$}
+             -- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.5] {$11$}
+             -- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.5] {$12$}                                      
+              --([shift={(13, -0.65)}] t1.mid) node[right,scale=0.5] {$t$};
+              
+      \foreach \x in {0, 1, 4, 5, 8, 9, 10, 11, 12} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+      
+      \node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BCAD$};
+      
+%%      \node[above right=-1.15cm and -2cm of t1.mid, scale=1, rotate=0] {$Hello BCAD$};
+              
+ 
+ 		\node(t1) at ([shift={(0, -2)}] t1.mid) {};       		
+		 \node[above right=0cm and 0cm of t1.mid, draw, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};          
+
+
+%%  \draw ([yshift=-0.5mm] second0.north)
+%%		-- ([yshift=-0.5mm, xshift=0.5mm] second0.north)
+%%		-- ([xshift=0.5mm] second0.north);			
+		
+%%		\node[above left=0.15cm and 0cm of t2.south west, scale=0.5, rotate=0] {$GPU$};
+%%		\node[above left=0.15cm and 0cm of t3.south west, scale=0.5, rotate=0] {$CPU$};		
+%%		
+%%		\tikzstyle{legend}=[below=0.35, anchor=mid] 	
+%%		\draw[->] (-0.1, -0.1) -- (0, -0.1)  node[legend,scale=0.5] {$0$} --(1,-0.1) node [legend,scale=0.5] {$1$} --(1.5, -0.1) node[right,scale=0.5] {$t$}; 
+%%		
+%%		\foreach \x in {0cm, 1cm} \draw (\x, -0.12) -- (\x, -0.08);
+%%		%%			To align both figures of subfloat-- an object without drawing at the same depth
+%%		\path (-0.1, -0.5) -- (1.5, -0.5);
+		
+		\end{tikzpicture}
+%%	} %\hspace{0.01\textwidth} %\hfill% or \hspace{5mm} or \hspace{0.3\textwidth}
+%%	\subfloat[HP schedule]{
+%%		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=1.8, every node/.style={scale=1.8}]
+%%		\node(t1) at (0,0) {};      		
+%%		
+%%		\node[above right=0cm and 0cm of t1.mid, draw, minimum height=0.5cm, minimum width=0.618cm,draw,fill=white](t2) {$Y$};
+%%		
+%%		\node[above right=0.5cm and 0cm of t2.north west, draw, minimum height=0.5cm, minimum width=1.618cm,draw,fill=white](t3) {$X$};								
+%%		
+%%		\tikzstyle{legend}=[below=0.35, anchor=mid] 	
+%%		\draw[->] (-0.1, -0.1) -- (0, -0.1)  node[legend,scale=0.5] {$0$} --(0.618,-0.1) node [legend,scale=0.5] {$\tfrac{1}{\phi}$} --(1.618,-0.1) node [legend,scale=0.5] {$\phi$} --(2, -0.1) node[right,scale=0.5] {$t$}; 
+%%		
+%%		\foreach \x in {0cm, 0.618cm, 1.618cm} \draw (\x, -0.12) -- (\x, -0.08);
+%%		%%			To align both figures of subfloat -- an object without drawing at the same depth
+%%		
+%%		\path (-0.1, -0.5) -- (2, -0.5);
+%%		
+%%		\end{tikzpicture}
+%%	} 
+	\caption{ \label{fig:staticSchedules} Static.}
+\end{figure}
 
 \begin{figure}[htb]
 	
@@ -410,7 +507,7 @@ Fig~\ref{fig:staticOrderExample} shows schedules for all proposed heuristics of 
 %%%%string alg_name="smallest_communication_task_respects_memory_restriction";
 %%%%string alg_name="maximum_accelerated_task_respects_memory_restriction";
 
-In this class of strategy, when communication channel is idle, a task is chosen which satisfies the selection criteria maximally among other tasks. For example, if the selection criteria is to choose a highly compute intensive task, than  we calculate the ratio of compute time and communication time for all tasks, and the task with the  maximum ratio is selected (ties are broken randomly). As we assume that order on both channels is same, hence order on compute channel will follow the order of communication channel.
+In this class of strategy, when communication channel is idle, a task is chosen which satisfies the selection criteria maximally among other tasks. For example, if the selection criteria is to choose a highly compute intensive task, then  we calculate the ratio of compute time and communication time for all tasks, and the task with the  maximum ratio is selected (ties are broken randomly). As we assume that order on both channels is same, hence order on compute channel will follow the order of communication channel.
 
 \begin{itemize}[a)]
 	\item $largest_communication_task_respects_memory_restriction$:  We select a set of tasks which induce minimum idle time on compute channel. A task with the largest communication time is chosen from this set.  Memory requirement of this task should not be more than presently available memory. 
@@ -520,9 +617,9 @@ Here moderate memory capacity refers to limited capacity but close to the maximu
 	\section{Experimental Results}
 	\label{sec:exp}
 	
-	\todo[inline]{Machine information and our model}
+%%	\todo[inline]{Machine information and our model}
 	
-	We consider a machine called Cascade, available at PNNL, for our experiments. We obtain traces by running  two molecular chemistry applications,  double precision version of Hartree-Fock (HF) and Coupled Cluster Single Double (CCSD) of NWChem package with 4 Uracil molecules input on 10 nodes of this machine. Each node is composed of 16 Intel Xeon E5-2670 cores, hence we use 160 processes for the execution. Each process executes 300-800 tasks.  NWChem takes advantages of a Partitioned Global Address Space Programming Model, Global Arrays (GA), to use shared-memory programming APIs  on distributed memory computers.  Our data transfer model is quite simple and  we consider that all data transfers between each process's local memory and GA memory take the same route. Modeling of different routes of data transfers for the same source-destination pair, bandwidth sharing for different source-destination pairs and network congestion is more challenging and part of our future work. Our model is simple yet it provides insight to the application developers (or runtime system) that  in what-order all data transfer  are issued for the same source-destination pair to maximise communication-computation overlap. Our model is easily adaptable to any source-destination where there is one fixed route between source and destination (such as between CPU and GPU, one copy engine to transfer data from CPU (resp. GPU) to GPU (resp. CPU) ).
+	We consider a machine called Cascade, available at PNNL, for our experiments. We obtain traces by running  two molecular chemistry applications,  double precision version of Hartree-Fock (HF) and Coupled Cluster Single Double (CCSD) of NWChem package with 4 Uracil molecules input on 10 nodes of this machine. Each node is composed of 16 Intel Xeon E5-2670 cores. NWChem takes advantages of a Partitioned Global Address Space Programming Model, Global Arrays (GA), to use shared-memory programming APIs  on distributed memory computers. GA dedicates one core of each node to handle communication, hence we can view a node as being composed of 15 computational cores. We use 150 processes for each application and obtain 150 trace files. Each process executes around 300-800 tasks. Our data transfer model is quite simple and  we consider that all data transfers between each process's local memory and GA memory take the same route. Modeling of different routes of data transfers for the same source-destination pair, bandwidth sharing for different source-destination pairs and network congestion is more challenging and part of our future work. Our model is simple yet it provides insight to the application developers (or runtime system) that  in what-order all data transfer  are issued for the same source-destination pair to maximise communication-computation overlap. Our model is easily adaptable to any source-destination where there is one fixed route between source and destination (such as between CPU and GPU, one copy engine to transfer data from CPU (resp. GPU) to GPU (resp. CPU) ).
 	\todo[inline]{More about tiling}
 	Both applications mainly perform two types of computations, tensor transpose and tensor contractions.  HF expects to specify a tile size and we set it to 100, so that each core can be efficiently utilize.  CCSD automatically determines tile sizes at different program points based on the input (molecule?).  Hence, HF operates on almost homogeneous tiles while CCSD on heterogeneous tiles.
 	
@@ -578,26 +675,39 @@ CCSD application operates on tasks of different sizes, hence different heuristic
 Figure~\ref{fig:ratio_to_optimal_best_ccsd} shows that best variants of dynamic and static+dynamic strategies achieve similar performance at minimum memory capacity $m_c$. But as memory capacity increases hterogeneity allows static+dynamic strategies to take advantage of static knowledge to get maximum overlap and dynamic correction to select another task in case of memory capacity limitation. Static strategies also start performing better at the end, which indicates that this application has potential for significant communication-computation overlap and pure dynamic strategies are unable to take scheduling decision based on this information.
 
 \subsection{HF and CCSD Characteristics}
-
-
-  
-\begin{figure}[htb]
-	\centering
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includegraphics[width=.95\linewidth]{../ExperimentalResults/application_properties_hf.pdf}
-		\caption{HF workloads}
-		\label{fig:hfProperties}
-	\end{subfigure}%
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includegraphics[width=.95\linewidth]{../ExperimentalResults/application_properties_ccsd.pdf}
-		\caption{CCSD workloads}
-		\label{fig:ccsdProperties}
-	\end{subfigure}
+ 
+ \begin{figure}[htb]
+ 	%\begin{tabular}{c}
+ 	\subfloat[HF workloads\label{fig:hfProperties}]{%
+		\includegraphics[width=.45\linewidth]{../ExperimentalResults/application_properties_hf.pdf}
+ 	}%\\
+ 	\subfloat[CCSD workloads\label{fig:ccsdProperties}]{%
+		\includegraphics[width=.45\linewidth]{../ExperimentalResults/application_properties_ccsd.pdf}
+ 	}%\\
+ 	%\end{tabular}
 	\caption{HF and CCSD tasks characteristics.}
-	\label{fig:ApplicationProperties}
-\end{figure}
+    \label{fig:ApplicationProperties}
+ \end{figure}
+ 
+ 
+%%  
+%%\begin{figure}[htb]
+%%	\centering
+%%	\begin{subfigure}{.5\textwidth}
+%%		\centering
+%%		\includegraphics[width=.95\linewidth]{../ExperimentalResults/application_properties_hf.pdf}
+%%		\caption{HF workloads}
+%%		\label{fig:hfProperties}
+%%	\end{subfigure}%
+%%	\begin{subfigure}{.5\textwidth}
+%%		\centering
+%%		\includegraphics[width=.95\linewidth]{../ExperimentalResults/application_properties_ccsd.pdf}
+%%		\caption{CCSD workloads}
+%%		\label{fig:ccsdProperties}
+%%	\end{subfigure}
+%%	\caption{HF and CCSD tasks characteristics.}
+%%	\label{fig:ApplicationProperties}
+%%\end{figure}
 
 To get more insights into the considered applications, we also look in to their workloads. Figure~\ref{fig:ApplicationProperties} exhibits that HF is a communication intensive application and maximum 20\%  can be expected in the best scenario. While in CCSD , communications and computations are almost evenly distributed and  40-75\% communication-computation overlap is possible.
 
@@ -611,26 +721,39 @@ To get more insights into the considered applications, we also look in to their 
 	\label{fig:iterativeLpSolution}
 \end{figure}
 
-\subsection{Scheduling In Batches}
-In most applications, scheduler can only observe a limited batch of independent tasks. Therefore we organize tasks of each trace file in the group of 100 and apply each heuristic on them consecutively.  Figure~\ref{fig:best_variants_batch} shows performance of the best variants of all categories for both applications. The plots exhibit behavior similar to Figures~\ref{fig:ratio_to_optimal_best_hf} and ~\ref{fig:ratio_to_optimal_best_CCSD}, static+dynamic variants attain maximum communication-computation overlap and outperform other heuristics.
+\subsection{Scheduling in Batches}
+In most applications, scheduler may only observe a limited batch of independent tasks. Therefore we organize tasks of each trace file in the batch of 100. Last group may have less than 100 tasks. We  apply each heuristic on each group consequently.  Figure~\ref{fig:best_variants_batch} shows performance of the best variants of all categories for both applications. The plots exhibit behavior similar to Figures~\ref{fig:ratio_to_optimal_best_hf} and ~\ref{fig:ratio_to_optimal_best_CCSD}, static+dynamic variants attain maximum communication-computation overlap and outperform other heuristics.
 \todo[inline]{SKumar:combine both plots}
-\begin{figure}[htb]
-	\centering
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includegraphics[width=.95\linewidth]{../ExperimentalResults/batch-100/inverse_ratio_to_optimal_hf_batch-best.pdf}
-		\caption{Best variants of HF.}
-		\label{fig:hf_best_variants_batch}
-	\end{subfigure}%
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includegraphics[width=.95\linewidth]{../ExperimentalResults/batch-100/inverse_ratio_to_optimal_ccsd_batch-best.pdf}
-		\caption{Best variants of CCSD.}
-		\label{fig:hf_best_variants_batch}
-	\end{subfigure}
+
+
+ \begin{figure}[htb]
+	\subfloat[Best variants of HF.\label{fig:hf_best_variants_batch}]{%
+		\includegraphics[width=.45\linewidth]{../ExperimentalResults/batch-100/inverse_ratio_to_optimal_hf_batch-best.pdf}
+	}%\\
+	\subfloat[Best variants of CCSD.\label{fig:ccsd_best_variants_batch}]{%
+		\includegraphics[width=.45\linewidth]{../ExperimentalResults/batch-100/inverse_ratio_to_optimal_ccsd_batch-best.pdf}
+	}%\\
 	\caption{Best variants of all categories where heuristics are applied in the batches of 100 tasks.}
 	\label{fig:best_variants_batch}
-\end{figure}
+ \end{figure}
+
+%%\begin{figure}[htb]
+%%	\centering
+%%	\begin{subfigure}{.5\textwidth}
+%%		\centering
+%%		\includegraphics[width=.95\linewidth]{../ExperimentalResults/batch-100/inverse_ratio_to_optimal_hf_batch-best.pdf}
+%%		\caption{Best variants of HF.}
+%%		\label{fig:hf_best_variants_batch}
+%%	\end{subfigure}%
+%%	\begin{subfigure}{.5\textwidth}
+%%		\centering
+%%		\includegraphics[width=.95\linewidth]{../ExperimentalResults/batch-100/inverse_ratio_to_optimal_ccsd_batch-best.pdf}
+%%		\caption{Best variants of CCSD.}
+%%		\label{fig:ccsd_best_variants_batch}
+%%	\end{subfigure}
+%%	\caption{Best variants of all categories where heuristics are applied in the batches of 100 tasks.}
+%%	\label{fig:best_variants_batch}
+%%\end{figure}
 
 \subsection{Impact of heterogeneity on different heuristics}
 
@@ -648,14 +771,12 @@ To know the affect of heterogeneity, we set the memory requirement of each task 
 \section{Conclusion and Perspectives}
 
 
+%%We also plan to extend our model by taking bandwidth sharing and different possible routes for the same source-destination pair into account.
+
+
 In this article, we consider the problem of deciding the order of data transfers between two memory nodes such that overlap of communication and  computation is maximized. With Exascale computing, applications face bottlenecks due to communications. Hence, it is extremely important to achieve the maximum overlap of computation and communication in order to exploit the full potential of the system. We show that determining the order of data transfers is an NP complete problem. We proposed multiple data transfer heuristics and evaluated them on two molecular chemistry kernels, HF and CCSD. Our results show that some of our heuristics achieve significant overlap and perform very close to the lower bound of makespan. We plan to evaluate our strategies on different applications coming from multiple domains. We also plan to study the behavior of our strategies in the context of overlapping CPU-GPU communications with computation. A runtime system aims at exposing different heuristics, to maximize the communication-computation overlap, at developer level and automatically selecting the best one is currently underway.
 
-%%	\begin{itemize}
-%%		\item Machine description
-%%		\item temporary data requirement
-%%		\item Description of all kernels (Molecular Chemistry Kernels)
-%%		\item Think about results and graphs (Most probably results in $R$ plots)
-%%	\end{itemize}
+
 
 
 \bibliographystyle{IEEEtran}
