tikz diagram for static schedule

--- a/Article/article.tex
+++ b/Article/article.tex
@@ -412,28 +412,32 @@ D & 2 & 1\\ \hline
 	\begin{figure}[htb]
 	\centering
 %% 	\subfloat[Optimal schedule]{
-		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=1, every node/.style={scale=1}]
-		\node(t1) at (0,0) {};       		
-		\node[above right=0cm and 0cm of t1.mid, draw, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};
+		\begin{tikzpicture}[decoration={brace, amplitude=5},scale=0.5, every node/.style={scale=0.5}]
+		\tikzstyle{legend}=[below=0.25, anchor=mid] 	
+		\node(t1) at (0,0) {};   
 		
-		\node[below right=0cm and 0cm of b11.south east, draw, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b12) {$B$};			
+	    \node[above right=0.8cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=13cm, draw=white, fill=white](IMC) {$Infinite Memory Capacity$}; 	    		
+		    		
+		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};
 		
-		\node[above right=0cm and 0cm of b11.south east, draw, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c11) {$C$};
+		\node[below right=0cm and 0cm of b11.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b12) {$B$};			
+		
+		\node[above right=0cm and 0cm of b11.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c11) {$C$};
 
-		\node[below right=0cm and 0cm of c11.south east, draw, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c12) {$C$};		
+		\node[below right=0cm and 0cm of c11.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c12) {$C$};		
 		
-		\node[above right=0cm and 0cm of c11.south east, draw, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a11) {$A$};
+		\node[above right=0cm and 0cm of c11.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a11) {$A$};
 
-		\node[below right=0cm and 0cm of c12.north east, draw, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a12) {$A$};
+		\node[below right=0cm and 0cm of c12.north east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a12) {$A$};
 		
-		\node[above right=0cm and 0cm of a11.south east, draw, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d11) {$D$};
+		\node[above right=0cm and 0cm of a11.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d11) {$D$};
 		
-		\node[below right=0cm and 0cm of a12.north east, draw, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d12) {$D$};	
+		\node[below right=0cm and 0cm of a12.north east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d12) {$D$};	
 		
 %%		\draw[->]	(5,-1)-- (b11.west, b11.south)	;
 		
 %%		\draw[->] ([xshift=-0.1cm, yshift=-1cm] b11.south west)--([xshift=13cm, yshift=-1cm] b11.south west);
-		\tikzstyle{legend}=[below=0.25, anchor=mid] 	
+
 		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
              -- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
              -- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.5] {$1$}
@@ -444,7 +448,7 @@ D & 2 & 1\\ \hline
              -- ([shift={(10, -0.65)}] t1.mid)node[legend,scale=0.5] {$10$}
              -- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.5] {$11$}
              -- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.5] {$12$}                                      
-              --([shift={(13, -0.65)}] t1.mid) node[right,scale=0.5] {$t$};
+              --([shift={(17, -0.65)}] t1.mid)node[right,scale=0.5] {$t$};
               
       \foreach \x in {0, 1, 4, 5, 8, 9, 10, 11, 12} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
       
@@ -453,8 +457,181 @@ D & 2 & 1\\ \hline
 %%      \node[above right=-1.15cm and -2cm of t1.mid, scale=1, rotate=0] {$Hello BCAD$};
               
  
- 		\node(t1) at ([shift={(0, -2)}] t1.mid) {};       		
-		 \node[above right=0cm and 0cm of t1.mid, draw, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b11) {$B$};          
+ 		\node(t1) at ([shift={(0, -3)}] t1.mid) {};   
+	    \node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=13cm, draw=white, fill=white](MC) {$Memory Capacity=6$}; 
+	    
+
+	    
+	    
+   		\node(t1) at ([shift={(0, -0.8)}] t1.mid) {};                		
+		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b21) {$B$};          
+		
+		\node[below right=0cm and 0cm of b21.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b22) {$B$};			
+
+		\node[above right=0cm and 0cm of b21.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c21) {$C$};
+
+		\node[below right=0cm and 0cm of c21.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c22) {$C$};		
+
+		\node[above right=0cm and 0cm of c22.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a21) {$A$};
+
+		\node[below right=0cm and 0cm of a21.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a22) {$A$};
+
+		\node[above right=0cm and 0cm of a21.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d11) {$D$};
+
+		\node[below right=0cm and 0cm of d11.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d12) {$D$};	
+
+
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
+		-- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.5] {$1$}
+		-- ([shift={(4, -0.65)}] t1.mid)node[legend,scale=0.5] {$4$}
+		-- ([shift={(5, -0.65)}] t1.mid)node[legend,scale=0.5] {$5$}
+		-- ([shift={(9, -0.65)}] t1.mid)node[legend,scale=0.5] {$9$}
+		-- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.5] {$12$}         
+		-- ([shift={(14, -0.65)}] t1.mid)node[legend,scale=0.5] {$14$}                                      
+		-- ([shift={(15, -0.65)}] t1.mid)node[legend,scale=0.5]{$15$}
+	  	-- ([shift={(17, -0.65)}] t1.mid)node[right,scale=0.5] {$t$};
+
+		\foreach \x in {0, 1, 4, 5, 9, 12, 14, 15} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+
+		\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BCAD$};
+		
+%% schedule of third heuristic		
+   		\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};                		
+		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b31) {$B$};          
+
+		\node[below right=0cm and 0cm of b31.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b32) {$B$};			
+
+		\node[above right=0cm and 0cm of b31.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d31) {$D$};
+
+		\node[below right=0cm and 0cm of b32.north east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d32) {$D$};		
+
+		\node[above right=0cm and 0cm of d31.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a31) {$A$};
+
+		\node[below right=0cm and 0cm of a31.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a32) {$A$};
+
+		\node[above right=0cm and 0cm of a32.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c31) {$C$};
+
+		\node[below right=0cm and 0cm of c31.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c32) {$C$};	
+
+
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
+		-- ([shift={(1, -0.65)}] t1.mid)node[legend,scale=0.5] {$1$}
+		-- ([shift={(3, -0.65)}] t1.mid)node[legend,scale=0.5] {$3$}
+		-- ([shift={(4, -0.65)}] t1.mid)node[legend,scale=0.5] {$4$}
+		-- ([shift={(5, -0.65)}] t1.mid)node[legend,scale=0.5] {$5$}
+		-- ([shift={(6, -0.65)}] t1.mid)node[legend,scale=0.5] {$6$}         
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.5] {$8$}                                      
+		-- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.5]{$12$} 
+		-- ([shift={(16, -0.65)}] t1.mid)node[legend,scale=0.5] {$16$}
+		--([shift={(17, -0.65)}] t1.mid)node[right,scale=0.5] {$t$};
+		
+		\foreach \x in {0, 1, 3, 4, 5, 6, 8, 12, 16} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+		
+		\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$BDAC$};
+				
+		
+%% schedule of fourth heuristic		
+		\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};                		
+		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c41) {$C$};          
+		
+		\node[below right=0cm and 0cm of c41.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c42) {$C$};			
+		
+		\node[above right=0cm and 0cm of c41.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b41) {$B$};
+		
+		\node[below right=0cm and 0cm of c42.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b42) {$B$};		
+		
+		\node[above right=0cm and 0cm of c42.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a41) {$A$};
+		
+		\node[below right=0cm and 0cm of a41.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a42) {$A$};
+		
+		\node[above right=0cm and 0cm of b42.north east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d41) {$D$};
+		
+		\node[below right=0cm and 0cm of d41.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d42) {$D$};	
+		
+		
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
+		-- ([shift={(4, -0.65)}] t1.mid)node[legend,scale=0.5] {$4$}
+		-- ([shift={(5, -0.65)}] t1.mid)node[legend,scale=0.5] {$5$}
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.5] {$8$}
+		-- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.5] {$11$}
+		-- ([shift={(13, -0.65)}] t1.mid)node[legend,scale=0.5] {$13$}         
+		-- ([shift={(14, -0.65)}] t1.mid)node[legend,scale=0.5] {$14$} 
+		--([shift={(17, -0.65)}] t1.mid)node[right,scale=0.5] {$t$};
+		
+		\foreach \x in {0, 4, 5, 8, 11, 13, 14} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+		
+		\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$CBAD$};
+
+%% schedule of fifth heuristic		
+		\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};                		
+		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d51) {$D$};          
+		
+		\node[below right=0cm and 0cm of d51.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d52) {$D$};			
+		
+		\node[above right=0cm and 0cm of d51.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b51) {$B$};
+		
+		\node[below right=0cm and 0cm of b51.south east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b52) {$B$};		
+		
+		\node[above right=0cm and 0cm of d52.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a51) {$A$};
+		
+		\node[below right=0cm and 0cm of a51.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a52) {$A$};
+		
+		\node[above right=0cm and 0cm of a52.north east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c51) {$C$};
+		
+		\node[below right=0cm and 0cm of c51.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c52) {$C$};	
+		
+		
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
+		-- ([shift={(2, -0.65)}] t1.mid)node[legend,scale=0.5] {$2$}
+		-- ([shift={(3, -0.65)}] t1.mid)node[legend,scale=0.5] {$3$}
+		-- ([shift={(6, -0.65)}] t1.mid)node[legend,scale=0.5] {$6$}
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.5] {$8$}
+		-- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.5] {$12$}         
+		-- ([shift={(16, -0.65)}] t1.mid)node[legend,scale=0.5] {$16$} 
+		--([shift={(17, -0.65)}] t1.mid)node[right,scale=0.5] {$t$};
+		
+		\foreach \x in {0, 2, 3, 6, 8, 12, 16} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+		
+		\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$DBAC$};
+
+%% schedule of sixth heuristic		
+		\node(t1) at ([shift={(0, -1.8)}] t1.mid) {};                		
+		\node[above right=0cm and 0cm of t1.mid, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c61) {$C$};          
+		
+		\node[below right=0cm and 0cm of c61.south east, minimum height=0.5cm, minimum width=4cm,draw,fill=white](c62) {$C$};			
+		
+		\node[above right=0cm and 0cm of c62.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](a61) {$A$};
+		
+		\node[below right=0cm and 0cm of a61.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](a62) {$A$};		
+		
+		\node[above right=0cm and 0cm of a61.south east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](b61) {$B$};
+		
+		\node[below right=0cm and 0cm of a62.north east, minimum height=0.5cm, minimum width=3cm,draw,fill=white](b62) {$B$};
+		
+		\node[above right=0cm and 0cm of b61.south east, minimum height=0.5cm, minimum width=2cm,draw,fill=white](d61) {$D$};
+		
+		\node[below right=0cm and 0cm of b62.north east, minimum height=0.5cm, minimum width=1cm,draw,fill=white](d62) {$D$};	
+		
+		
+		\draw[->] ([shift={(-0.1, -0.65)}] t1.mid)
+		-- ([shift={(0, -0.65)}] t1.mid)node[legend,scale=0.5] {$0$}
+		-- ([shift={(4, -0.65)}] t1.mid)node[legend,scale=0.5] {$4$}
+		-- ([shift={(8, -0.65)}] t1.mid)node[legend,scale=0.5] {$8$}
+		-- ([shift={(11, -0.65)}] t1.mid)node[legend,scale=0.5] {$11$}
+		-- ([shift={(12, -0.65)}] t1.mid)node[legend,scale=0.5] {$12$}
+		-- ([shift={(13, -0.65)}] t1.mid)node[legend,scale=0.5] {$13$}         
+		-- ([shift={(14, -0.65)}] t1.mid)node[legend,scale=0.5] {$14$}
+		-- ([shift={(16, -0.65)}] t1.mid)node[legend,scale=0.5] {$16$} 
+		-- ([shift={(17, -0.65)}] t1.mid)node[legend,scale=0.5] {$17$}  
+		--([shift={(17.1, -0.65)}] t1.mid)node[right,scale=0.5] {$t$};
+		
+		\foreach \x in {0, 4, 8, 11, 12, 13, 14, 16, 17} \draw ([shift={(\x, -0.61)}] t1.mid) -- ([shift={(\x, -0.69)}] t1.mid);
+		
+		\node[above left=-0.15cm and 1cm of t1.mid, scale=1, rotate=0] {$CABD$};
 
 
 %%  \draw ([yshift=-0.5mm] second0.north)
